examples/error/NoMain.c
int funzione(int c){
	int[][] a;
	int[] b;
	int c;

	float[] d;
	bool[] e;

	d = new float[3];
	e = new bool[2];
	a = new int[2][3];
	b = new int[3.2];

	e = d;
	b = c[1];
	a = b[0][0];	
}
